Normal necessary changes made

--- a/views/club_dashboard.ejs
+++ b/views/club_dashboard.ejs
@@ -336,10 +336,10 @@
 
       <select name="type" name="type" required>
         <option value="">Select Type</option>
-        <option value="Batsman">Batsman</option>
-        <option value="Bowler">Bowler</option>
-        <option value="Wicket_Keeper">Wicket Keeper</option>
-        <option value="All_Rounder">All Rounder</option>
+        <option value="batsman">Batsman</option>
+        <option value="bowler">Bowler</option>
+        <option value="wicket_keeper">Wicket Keeper</option>
+        <option value="all_rounder">All Rounder</option>
       </select>
 
       <select name="batting_style" required>
