--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -2,7 +2,7 @@
   <div class="footer-content">
     <div class="footer-left">
       <div class="footer-logo">
-        <img src="./logo.png" alt="Crossfit Logo">
+        <img src="/images/Crossfit.jpg" alt="Crossfit Logo">
         <a href="/">Crossfit</a>
       </div>
     </div>
